# metamorf

./: API.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
metamorf/: constants.py  help.py  main.py
metamorf/configuration/: configuration.yml  properties.yml
metamorf/configuration/mysql/: configuration_data_mysql.yml  configuration_metadata_mysql.yml
metamorf/configuration/postgresql/: configuration_data_postgresql.yml  configuration_metadata_postgresql.yml
metamorf/configuration/snowflake/: configuration_data_snowflake.yml  configuration_metadata_snowflake.yml
metamorf/configuration/sqlite/: configuration_data_sqlite.yml  configuration_metadata_sqlite.yml
metamorf/engines/: engine.py  engine_api.py  engine_backup.py  engine_commit.py  engine_delete.py  engine_deploy.py  engine_deploy_example.py  engine_download.py  engine_files.py  engine_init.py  engine_manifest.py  engine_metadata.py  engine_output.py  engine_process.py  engine_recover.py  engine_restore.py  engine_run.py  engine_upload.py  engine_validate.py
metamorf/entry/: ENTRY_AGGREGATORS.csv  ENTRY_DATASET_MAPPINGS.csv  ENTRY_DATASET_RELATIONSHIPS.csv  ENTRY_DV_ENTITY.csv  ENTRY_DV_MAPPINGS.csv  ENTRY_DV_PROPERTIES.csv  ENTRY_ENTITY.csv  ENTRY_FILES.csv  ENTRY_HAVING.csv  ENTRY_ORDER.csv  ENTRY_PATH.csv
metamorf/initialization/mysql/: init_example_data_mysql.sql  init_example_metadata_mysql.sql  (+2 more)
metamorf/tools/: argparser.py  configvalidator.py  connection.py  database_objects.py  filecontroller.py  log.py  manifest.py  metadata.py  metadata_validator.py  node.py  query.py  utils.py
(+10 files in other folders)
